# harmony

./: .gitignore  CLAUDE.md  justfile  package.json  pnpm-lock.yaml
.claude/: grimoire-config.json  recipes.json  settings.json
docs/: README.md  coding-standards.md  release-planning-v0.1.md  release-planning-v0.10.md  release-planning-v0.12.md  release-planning-v0.13.md  release-planning-v0.16.md  release-planning-v0.18.md  release-planning-v0.21.md  release-planning-v0.22.md  release-planning-v0.3.md  release-planning-v0.4.md  roadmap.md  (+7 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/catalog/: 3do.json  atari2600.json  atari5200.json  atari7800.json  colecovision.json  dreamcast.json  gamecube.json  genesis.json  intellivision.json  jaguar.json  mastersystem.json  n64.json  neogeo.json  nes.json  odyssey2.json  pcengine.json  ps1.json  ps2.json  saturn.json  snes.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: console.rs  familiar.rs  library.rs  metadata.rs  mod.rs  native_play.rs  search.rs
src-tauri/src/config/: mod.rs  paths.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/console/: catalog.rs  media.rs  mod.rs  titles.rs
src-tauri/src/core/metadata/: mod.rs  wikipedia.rs
src-tauri/src/core/search/: fetch.rs  mod.rs  provider.rs
src-tauri/src/db/: migrations.rs
src-tauri/src/db/migrations/: 005_game_description_and_rom_providers.sql  006_console_meta.sql  007_search_provider_direct_download.sql  008_search_provider_compose_filters.sql
src-tauri/src/db/repo/: console_meta.rs  library.rs  mod.rs  search_providers.rs
src-tauri/src/play/native/: host.rs  mod.rs  runtime.rs
(+91 files in other folders)
