[package]
name = "harmony"
version = "0.1.0"
description = "Harmony — a Mac-native (Apple Silicon) emulator frontend / launcher."
authors = ["Harmony"]
edition = "2021"

# The library the binary calls into. `cdylib`/`staticlib` are required by the
# mobile Tauri targets; `lib` lets unit tests link against the crate.
[lib]
name = "harmony_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# SHARED (append-only): each backend work item adds the crates its domain needs
# below. Keep one dependency per line, alphabetical, so parallel agents merge by
# concatenation rather than colliding on a shared line.
[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# --- APPEND DOMAIN DEPENDENCIES BELOW THIS LINE ---
crc32fast = "1"                                            # W6 (CRC32 ROM hashing)
dirs = "5"                                                 # W4 (app-support path resolution)
md-5 = "0.10"                                              # W6 (MD5 ROM hashing)
quick-xml = "0.36"                                         # W6 (No-Intro Logiqx DAT parsing)
rusqlite = { version = "0.32", features = ["bundled"] }    # W3 (db)
walkdir = "2"                                              # W6 (recursive folder walker)
# image = "..."                                            # W10 (vibrancy blur)
# reqwest = { version = "...", features = ["json"] }       # W5/W8/W12 (network)
